home page alignment. fixes #896

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -317,6 +317,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#17202a', end
 	z-index: 1000;
 }
 
+.trpUserHome {
+  margin-left: 88px;
+
+  @media @mobile {
+    margin-left: 0px;
+  }
+}
+
 .trpUnreadBadge {
 	display: none;
 	position: absolute;
